--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 </head>
 
 <body>
-    <h1>Omnifood</h1>
+    <header>
+        <div class="hero-text-box">
+            <h1>Goodbye junk food.
+                <br> Hello super healty meals.</h1>
+            <a class="btn btn-full" href="#">I'm hungry</a>
+            <a class="btn btn-ghost" href="#">Show me more</a>
+        </div>
+    </header>
 </body>
 
 </html>
