--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body>
     <header>
+        <nav>
+            <div class="row">
+
+            </div>
+        </nav>
         <div class="hero-text-box">
             <h1>Goodbye junk food.
                 <br> Hello super healty meals.</h1>
