--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <img src="assets/img/download-app.svg" alt="App Store Button">
                 </a>
                 <a href="#" class="btn-app">
-                    <img src="assets/img/download-app-android.png" alt="Play Store Button">
+                    <img src="assets/img/download-app-android.svg" alt="Play Store Button">
                 </a>
             </div>
         </div>
