--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="col span-1-of-3">
                 <blockquote>
                     Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.
-                    Now that I got used to it, I couldn't live without my daily meals!
+                    Now that I've gotten used to it, I couldn't live without my daily meals!
                     <cite>
                         <img src="assets/img/customer-1.jpg" alt="customer-1">Alberto Duncan</cite>
                 </blockquote>
