--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav>
             <div class="row">
                 <img src="assets/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <img src="assets/img/logo.png" alt="Omnifood logo" class="logo-black">
                 <ul class="main-nav">
                     <li>
                         <a href="#">Food delivery</a>
@@ -42,7 +43,7 @@
         </div>
     </header>
 
-    <section class="section-features">
+    <section class="section-features js--section-features">
         <div class="row">
             <h2>Get food fast - not fast food</h2>
             <p class="long-copy">
@@ -128,7 +129,7 @@
 
     <section class="section-steps">
         <div class="row">
-            <h2>How it works - As simple as 1, 2, 3</h2>
+            <h2>How it works &mdash; As simple as 1, 2, 3</h2>
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
@@ -475,10 +476,14 @@
             <p>Copyright &copy; 2018 by Omnifood. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
-<script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
 
 </html>
