--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <img src="assets/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="assets/img/logo.png" alt="Omnifood logo" class="logo-black">
-                <ul class="main-nav">
+                <ul class="main-nav js--main-nav">
                     <li>
                         <a href="#features">Food delivery</a>
                     </li>
@@ -34,6 +34,9 @@
                         <a href="#plans">Sign up</a>
                     </li>
                 </ul>
+                <a class="mobile-nav-icon js--nav-icon">
+                    <ion-icon name="menu" class="mobile-nav-icon"></ion-icon>
+                </a>
             </div>
         </nav>
         <div class="hero-text-box">
@@ -137,15 +140,15 @@
                 <img src="assets/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
             </div>
             <div class="col span-1-of-2 steps-box">
-                <div class="works-step">
+                <div class="works-step clearfix">
                     <div>1</div>
                     <p>Choose the subscription plan that best fits your needs and sign up today.</p>
                 </div>
-                <div class="works-step">
+                <div class="works-step clearfix">
                     <div>2</div>
                     <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
                 </div>
-                <div class="works-step">
+                <div class="works-step clearfix">
                     <div>3</div>
                     <p>Enjoy your meal within 20 minutes. See you next time!</p>
                 </div>
