Add meta and validate html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring delicious and healthy meals to as many people as possible.">
+
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="vendors/css/animate.css">
@@ -94,6 +96,7 @@
     </section>
 
     <section class="section-meals">
+        <h2 class="hidden-meals-header">Meals section</h2>
         <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
@@ -429,10 +432,10 @@
                 </div>
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label for="">&nbsp;</label>
+                        <label for="submit">&nbsp;</label>
                     </div>
                     <div class="col span-2-of-3">
-                        <input type="submit" value="Send it!">
+                        <input type="submit" id="submit" value="Send it!">
                     </div>
                 </div>
             </form>
