Make map responsive

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </div>
     </section>
 
-    <div class="map-box">
+    <section class="map-box">
         <div class="map"></div>
 
         <div class="form-box">
@@ -442,7 +442,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </section>
 
     <footer>
         <div class="row">
